# NeutronStream

./: CMakeLists.txt  README.md  statistic.sh
cmake/: utils.cmake
config/: config_dnc_p.txt  config_github.txt  config_social_p.txt  config_uci_p.txt
data/dnc/: dnc.csv  graph0.txt  process.py
data/github/: github.csv  graph0.txt
data/github/initial/: event_test.csv  event_train.csv  initial_edge.csv
data/reality-call/: graph0.txt  reality-call.csv
data/reality-call/initial/: ia-reality-call.edges  process.py
data/shashdot-reply/: graph0.txt
data/shashdot-reply/initial/: ia-slashdot-reply-dir.edges
data/social/: embedding0.txt  graph0.txt  social.csv
data/social/initial/: Subjects.csv  event_example.csv  event_test.csv  event_train.csv
data/uci/: graph0.txt  uci.csv
include/: dtype.h  session.h
include/dataset/: dataset.h  eventbuffer.h
include/dygstore/: adjlist.hpp  dygraph.hpp  embedding.hpp  event.h  interface.hpp  save_state.hpp  timebar.h
include/log/: log.h
include/model/: dygnn.h  dyrep.h  ldg.h
include/model/debug/: bug_dygnn.h  bug_dyrep.h  bug_ldg.h
include/process/: dysubg.h  graphop.h  sampler.hpp
include/process/engine/: analysis.hpp  engine.hpp  interface.hpp  parallel.hpp  parallel_test.hpp  parallel_thread.hpp  sequence.hpp  subgcache.hpp
include/utils/: acc_utils.h  hash_bitmap.h  locker.h  mytime.h  thread_utils.hpp  util.h
include/utils/thread_safe/: thread_safe_map.h  thread_safe_queue.hpp  thread_safe_set.h
src/: session.cc
src/dataset/: dataset.cc  eventbuffer.cc
src/dygstore/: event.cc  save_state.cc  timebar.cc
src/log/: log.cc
src/model/: dygnn.cc  dyrep.cc  ldg.cc
src/model/debug/: bug_dygnn.cc  bug_dyrep.cc  bug_ldg.cc
src/process/: analysis.cc  dysubg.cc  graphop.cc
src/utils/: acc_utils.cc  mytime.cc  util.cc
test/: dataset_analysis.cpp  debug_train_dygnn.cpp  debug_train_dyrep.cpp  debug_train_ldg.cpp  test.cpp  test_dataset.cpp  test_event_buffer.cpp  test_grad.cpp  test_log.cpp  test_process.cpp  test_sample.cpp  test_store.cpp  test_utils.cpp  train_dygnn.cpp  train_dyrep.cpp  train_ldg.cpp  window_silde_dygnn_delay.cpp  window_slide_dbgdygnn.cpp  window_slide_dbgdyrep.cpp  window_slide_dbgldg.cpp  window_slide_dygnn.cpp  window_slide_dyrep.cpp  window_slide_ldg.cpp
